# yzhpaste

./: .eslintrc.cjs  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tmp.vue  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  shims-tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmds.rs  conf.rs  events.rs  main.rs  setup.rs  tray.rs
src-tauri/src/config/: common_config.rs  config.rs  config_item.rs  mod.rs
src-tauri/src/core/: clipboard.rs  clipboard_listener.rs  database.rs  global.rs  mod.rs  shortcuts_manager.rs  sysopt.rs  tray.rs
src-tauri/src/plugins/: clipboard_listener.rs  mod.rs
src-tauri/src/utils/: dirs.rs  dispatch_util.rs  hotkey_util.rs  mod.rs  visible.rs  window.rs  window_util.rs
src/assets/: main.css
src/assets/css/: tokens.css
src/components/: ClipboardHistory.vue  ClipboardPopup.vue  KeysInput.vue  NumInput.vue  OptionButton.vue
src/components/options/: OptGeneral.vue  OptHotkey.vue  OptItem.vue  OptSync.vue
src/router/: index.ts
src/services/: cmds.ts  shortcuts.ts
src/stores/: clipdoard.ts  config.ts  records.ts
src/utils/: keyboard.ts  scroll.ts  useClickOutside.ts  window.ts
src/views/: ConfigView.vue  ContentView.vue
