[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["clipboard-all", "global-shortcut-all", "macos-private-api", "system-tray", "window-all"] }
window-vibrancy = "0.3.2"
arboard = "3.2.0"
base64 = "0.21.0"
rusqlite = "0.29.0"
active-win-pos-rs = "0.7.1"
anyhow = "1.0.70"
image = "0.24.6"
rust-crypto = { version = "0.2.36" }
rdev = "0.5.2"
chrono = "0.4.24"
lazy_static = "1.4.0"
parking_lot = "0.12.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
